--- a/index.html
+++ b/index.html
@@ -84,28 +84,30 @@
     </div>
     <div class="color">
       <div class="grad">
-        <i class="icon-hotairballoon text-white icon-large margin-25px-bottom"></i>
+        <img src="/images/64.png" alt="">
         <h5>Graduate with your startup</h5>
         <p>At Ubunifu, students learn with the focus of building and launching to market their startups at the end of
           their
           program. We dont offer job placements.</p>
       </div>
       <div class="learn">
-        <i class="icon-hotairballoon text-white icon-large margin-25px-bottom"></i>
-        <h5>Learn from top minds</h5>
+        <img src="/images/strategy.png" alt="">
+        <h5>Learn form top minds</h5>
         <p>Our curriculum is delivered by active industry thought leaders such as Reinhard & etc. The opportunity to be
           coached by
           accomplished engineers is rare.</p>
-      </div>
+        </div>
     </div>
     <div class="left">
-      <div class="project">
+        <div class="project">
+        <img src="/images/layers.png" alt="">        
         <h5>Project based Learning</h5>
         <p>Ubunifu's unique curriculum is based on the Project based Learning methodology. Students identify what they
           need to
           build/work on and we deliver through supported work.</p>
       </div>
       <div class="peer">
+        <img src="/images/shield.png" alt="">
         <h5>Peer Learning</h5>
         <p>Learn by doing. Learn from earch other. Always asking “why,” we constantly question the status quo. By
           challenging
@@ -357,8 +359,8 @@
     <!-- SECTION BLACK -->
 
     <!-- scroll button -->
-  <div class="eclipse">
-    <i class="fa fa-long-arrow-up" aria-hidden="true"></i>
+  <div  class="eclipse">
+    <i href="/index.html" class="fa fa-long-arrow-up" aria-hidden="true"></i>
   </div>
       <!-- scroll button -->
 
